# cavalier_contours_web_demo

./: .dockerignore  .eslintrc.js  .eslintrc.json  .gitignore  Dockerfile  LICENSE-MIT  README.md  deploy.sh  index.html  jsconfig.json  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vue.config.js
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: main.rs
cavalier_contours_web_ffi/: Cargo.toml
cavalier_contours_web_ffi/src/: lib.rs
firebase/: README.md  firebase.json
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/cavalier_contours_web_ffi/: Cargo.toml
frontend/src/: App.vue  index.css  main.ts  main_demo_routes.ts
frontend/src/core/: cavc_json_types.ts
src/: App.vue  index.css  main.js  main.ts  main_demo_routes.ts  router.js  shims-vue.d.ts  types.ts  typings.d.ts
src/assets/styles/: app.css
src/components/: About.vue  HelloWorld.vue
src/components/canvas_scene/: CanvasScene.vue  scene_renderer.ts
src/components/common/: Button.vue  CheckBox.vue  ControlsSidePane.vue  InputSlider.vue  NavButton.vue  PlineJsonEditor.vue  PrimaryButton.vue  Selector.vue
src/components/pages/: AboutPage.vue  HelloWorld.vue
src/components/pline_boolean/: PlineBooleanDemo.vue  PlineBooleanScene.vue  pline_boolean.js  pline_boolean.ts  pline_boolean_index.js
src/core/: cavc_types.ts  rendering.js  rendering.ts  rendering2.ts  shapes.js  shapes.ts  utils.js  utils.ts
wasm/: Cargo.toml
(+36 files in other folders)
