
[package]
authors = ["jbuckmccready<jbuckmccready@gmail.com>"]
description = "Wraps types and functions from cavalier_contours using wasm-bindgen for use in web apps."
edition = "2018"
license = "MIT OR Apache-2.0"
name = "cavalier_contours_web_ffi"
repository = "https://github.com/jbuckmccready/cavalier_contours_web_demo"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cavalier_contours = {git = "https://github.com/jbuckmccready/cavalier_contours", features = ["serde"]}
js-sys = "0.3"
serde-wasm-bindgen = "0.5"
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1", optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.3"
